--- a/composer.json
+++ b/composer.json
@@ -3,17 +3,11 @@
     "description": "openphp",
     "type": "project",
     "license": "GPL-3.0+",
-    "authors": [
-        {
-            "name": "fzzkyd",
-            "email": "amogha@qq.com"
-        }
-    ],
     "config": {
-        "vendor-dir": "./upload/system/storage/vendor/"
+        "vendor-dir": "./storage/vendor/"
     },
     "require": {
-        "leafo/scssphp": "0.7.6",
+        "leafo/scssphp": "0.7.7",
         "twig/twig": "1.35.3",
         "php": ">=5.4.0"
     }
